added AI chatbot and client side rendering

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-NODE_MAILER_EMAIL=
-NODE_MAILER_GMAIL_APP_PASSWORD=
+NODE_MAILER_EMAIL= ganeskk77gupta@gmail.com
+NODE_MAILER_GMAIL_APP_PASSWORD= ojvv rtmm xlti drdg
 
 NEXT_PUBLIC_PUSHER_APP_CLUSTOR=
 NEXT_PUBLIC_PUSHER_APP_SECRET=
 NEXT_PUBLIC_PUSHER_APP_KEY=
 NEXT_PUBLIC_PUSHER_APP_ID=
 
-OPEN_AI_KEY=
+OPEN_AI_KEY= sk-proj-YA2NVcZrp67VxqetxqGWT3BlbkFJH4FGEADkXFNtAU1j8wpc
 
-NEXT_PUBLIC_UPLOAD_CARE_PUBLIC_KEY=
-UPLOAD_CARE_SECRET_KEY=
+NEXT_PUBLIC_UPLOAD_CARE_PUBLIC_KEY=90dd43b1e8043fb26ca5
+UPLOAD_CARE_SECRET_KEY=83cd4e342bd2afce5b24
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3VubnktbWF5Zmx5LTU5LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_l6ZsDE8fRjtP41tE42mTfQlI718mtXPRmTXYAdhnR8
