--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@uploadcare/react-uploader": "^0.6.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -49,7 +50,11 @@
     "lucide-react": "^0.414.0",
     "next": "^14.2.5",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
+    "openai": "^4.53.0",
     "prisma": "^5.17.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-day-picker": "^9.0.2",
     "react-dom": "^18",
@@ -65,6 +70,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
